# DataAlchemy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  debug_config.py  debug_output.txt  debug_output_2.txt  inference.py  models.yaml  pyproject.toml  test_sft_init.py  test_ws.py  train.py  verify_feedback.py
data_processor/: .dockerignore  Dockerfile  main.py  pyproject.toml  sanitizers.py
data_processor/cleaners/: base.py  confluence.py  feedback.py  git_pr.py  jira.py
data_processor/engines/: python_engine.py  spark_engine.py
deploy/charts/data-alchemy/: Chart.yaml  operator-templates.yaml  values.yaml
deploy/charts/data-alchemy/crds/: dataalchemystack-crd.yaml
deploy/charts/data-alchemy/templates/: _helpers.tpl  configmap.yaml  coordinator.yaml  job-full-cycle.yaml  minio-ingress.yaml  operator-templates-configmap.yaml  operator.yaml  pv.yaml  pvc.yaml  rbac.yaml  secret.yaml  webui.yaml
deploy/examples/: stack-instance-k3d.yaml  stack-instance.yaml
deploy/k3d/: 00-rbac.yaml  01-namespace.yaml  02-minio.yaml  03-redis.yaml  04-pvc.yaml  05-webui.yaml  06-coordinator.yaml  07-lora-job.yaml  08-full-cycle-job.yaml  09-operator.yaml  README.md
deploy/operator/: Dockerfile  main.py  manifests.yaml  templates.yaml
docs/: ARCHITECTURE.md  DataAlchemy RoadMap.md  Data_Alchemy.txt  READY_TO_RUN.md  TESTING_PLAN.md
docs/maintenance/: CLEANUP_OLD_DATA.md  DATA_STORAGE_EXPLANATION.md  MIGRATE_MINIO_DATA.md  MINIO_PORT_FORWARD.md
docs/setup/: AMD_AI_MAX_395_ROCm_SETUP.md  INSTALL_K8S_TOOLS.md  PYTORCH_ROCm7.1_INSTALL.md  UBUNTU_K8S_IMPLEMENTATION_PLAN.md
docs/troubleshooting/: FIX_PROXY_ISSUE.md  GPU_PERMISSIONS_FIX.md  ROCm_GPU_FIX.md
k8s/: cluster-config.yaml  dataalchemy-crd.yaml  dataalchemy-stack.yaml  minio.yaml  operator-rbac.yaml  redis.yaml  spark-deployment.yaml  spark-job.yaml  spark-rbac.yaml
operator/: Dockerfile  main.py  pyproject.toml
scripts/: configure_docker_mirror.sh  configure_docker_proxy.sh  fix_gpu_permissions.sh  helm-deploy.sh  install_k8s_tools.sh  install_rocm.sh  k3d-deploy.sh  manage_cache.py  manage_minio.py  prepare_data.py  setup_k3d.sh  setup_operator.ps1  setup_operator.sh  test_gpu.py
scripts/core/: benchmark_inference.py  preload_model.py  prepare_data.py  test_gpu.py
scripts/ops/: init_webui.sh  manage_cache.py  manage_minio.py  port_forward_minio.sh  restart_k3d.sh
scripts/setup/: fix_gpu_permissions.sh  install_k8s_tools.sh  install_pytorch_rocm71.sh  install_rocm.sh  install_uv.sh  setup_k3d.sh  setup_operator.sh
spark_etl/: config.py  main.py
spark_etl/cleaners/: confluence.py  document.py  git_pr.py  jira.py
spark_etl/engines/: python_engine.py  spark_engine.py
spark_etl_standalone/: main.py  pyproject.toml  sanitizers.py
spark_etl_standalone/cleaners/: document.py  jira.py
src/: config.py  inference.py  run_agents.py  train.py
src/agents/: agent_a.py  agent_b.py  agent_c.py  agent_d.py  agent_scheduler.py  coordinator.py
src/agents/quant/: curator.py  quant_agent.py  scout.py  utils.py  validator.py
src/core/: agent_manager.py  interfaces.py  pipeline.py
src/etl/: main.py  sanitizers.py  sft_generator.py
src/etl/cleaners/: base.py  confluence.py  document.py  feedback.py  git_pr.py  jira.py
src/etl/engines/: python_engine.py  spark_engine.py
src/inference/: __init__.py  batch_engine.py  cache.py  metrics.py  model_manager.py  test_batch_engine.py  test_cache.py
src/rag/: quant_enhancer.py  retriever.py  vector_store.py
src/spark_etl/: config.py  main.py  prompts.py  sanitizers.py  sft_generator.py
src/spark_etl/cleaners/: confluence.py  git_pr.py  jira.py
src/spark_etl/engines/: __init__.py  python_engine.py  spark_engine.py
src/synthesis/: prompts.py  sft_generator.py
src/utils/: auth.py  logger.py  proxy.py  s3_utils.py  user_db.py
tests/: conftest.py  test_config.py  test_integration.py
webui/: app.py  generate_cert.py
webui/static/: index.html  script.js  style.css
