[project]
name = "lora"
version = "0.1.0"
description = "LoRA fine-tuning sample for AMD AI Max+ 395 (ROCm)"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "openai",
    "python-dotenv>=1.2.1",
    "apscheduler",
    "beautifulsoup4",
    "python-docx",
    "pypdf",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=4.36.0",
    "tokenizers>=0.15.0",
    "peft>=0.7.0",
    "datasets>=2.16.0",
    "accelerate>=0.26.0",
    "sentence-transformers>=2.3.0",
    "faiss-cpu",
    "langchain-community",
    "langchain-core",
    "tiktoken",
    "rank-bm25",
    "rocm-sdk-core ; sys_platform == 'win32'",
    "rocm-sdk-devel ; sys_platform == 'win32'",
    "rocm-sdk-libraries-custom ; sys_platform == 'win32'",
    "rocm ; sys_platform == 'win32'",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "cryptography>=43.0.0",
    "nest_asyncio>=1.6.0",
    "boto3>=1.34.0",
    "websockets>=12.0",
    "redis>=5.0.0",
    "sentence-transformers>=2.3.0",
    "prometheus-client>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart",
    "kubernetes>=28.1.0",
    "kopf>=1.36.0",
    "jieba>=0.42.1",
    "polars>=1.0.0",
    "scipy>=1.12.0",
    "s3fs>=2024.2.0",
]

[project.scripts]
data-alchemy = "run_agents:main"
train-lora = "train:train"
schedule-sync = "run_agents:main"

[tool.uv]
package = true

[tool.uv.sources]
# 核心修复：为所有 Windows 专属 URL 加上环境标记
rocm-sdk-core = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.1.1/rocm_sdk_core-0.1.dev0-py3-none-win_amd64.whl", marker = "sys_platform == 'win32'" }
rocm-sdk-devel = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.1.1/rocm_sdk_devel-0.1.dev0-py3-none-win_amd64.whl", marker = "sys_platform == 'win32'" }
rocm-sdk-libraries-custom = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.1.1/rocm_sdk_libraries_custom-0.1.dev0-py3-none-win_amd64.whl", marker = "sys_platform == 'win32'" }
rocm = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.1.1/rocm-0.1.dev0.tar.gz", marker = "sys_platform == 'win32'" }

torch = [
  { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.1.1/torch-2.9.0+rocmsdk20251116-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
  { index = "pytorch", marker = "sys_platform != 'win32'" }
]
torchvision = [
  { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.1.1/torchvision-0.24.0+rocmsdk20251116-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
  { index = "pytorch", marker = "sys_platform != 'win32'" }
]
torchaudio = [
  { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.1.1/torchaudio-2.9.0+rocmsdk20251116-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
  { index = "pytorch", marker = "sys_platform != 'win32'" }
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
